# rust-musl-docker-example

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: test.yml
src/: main.rs
